WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197911
compilation failure with clang 9
https://bugs.webkit.org/show_bug.cgi?id=197911
Summary
compilation failure with clang 9
Víctor M. Jáquez L.
Reported
2019-05-15 03:14:03 PDT
While compiling webkit's master with clang, either 6 or 9 I got this error [3/864] Building CXX object Source/WTF/wtf/CMakeFiles/WTF.dir/MetaAllocator.cpp.o FAILED: Source/WTF/wtf/CMakeFiles/WTF.dir/MetaAllocator.cpp.o /usr/bin/clang++-9 -DBUILDING_GTK__=1 -DBUILDING_WITH_CMAKE=1 -DBUILDING_WTF -DBWRAP_EXECUTABLE=\"/usr/bin/bwrap\" -DDBUS_PROXY_EXECUTABLE=\"/usr/bin/xdg-dbus-proxy\" -DGETTEXT_PACKAGE=\"WebKit2GTK-4.0\" -DHAVE_CONFIG_H=1 -DJSC_GLIB_API_ENABLED -DWEBKITGTK_API_VERSION_STRING=\"4.0\" -I/opt/webkit/WebKit/Source/bmalloc -I. -IDerivedSources -I/opt/webkit/WebKit/Source/ThirdParty -IDerivedSources/WTF -I/opt/webkit/WebKit/Source/WTF -I/opt/webkit/WebKit/Source/WTF/wtf -I/opt/webkit/WebKit/Source/WTF/wtf/dtoa -I/opt/webkit/WebKit/Source/WTF/wtf/persistence -I/opt/webkit/WebKit/Source/WTF/wtf/text -I/opt/webkit/WebKit/Source/WTF/wtf/text/icu -I/opt/webkit/WebKit/Source/WTF/wtf/threads -I/opt/webkit/WebKit/Source/WTF/wtf/unicode -isystem /usr/include/gio-unix-2.0 -isystem /usr/include/libmount -isystem /usr/include/blkid -isystem /usr/include/uuid -isystem /usr/include/glib-2.0 -isystem /usr/lib/x86_64-linux-gnu/glib-2.0/include -fdiagnostics-color=always -fcolor-diagnostics -Wextra -Wall -Wno-parentheses-equality -Wno-noexcept-type -Qunused-arguments -Wwrite-strings -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -ggdb -std=c++17 -fno-strict-aliasing -fno-exceptions -fno-rtti -std=c++17 -gsplit-dwarf -g -fPIC -MD -MT Source/WTF/wtf/CMakeFiles/WTF.dir/MetaAllocator.cpp.o -MF Source/WTF/wtf/CMakeFiles/WTF.dir/MetaAllocator.cpp.o.d -o Source/WTF/wtf/CMakeFiles/WTF.dir/MetaAllocator.cpp.o -c /opt/webkit/WebKit/Source/WTF/wtf/MetaAllocator.cpp In file included from /opt/webkit/WebKit/Source/WTF/wtf/MetaAllocator.cpp:30: In file included from /opt/webkit/WebKit/Source/WTF/wtf/MetaAllocator.h:34: In file included from /opt/webkit/WebKit/Source/WTF/wtf/MetaAllocatorHandle.h:32: In file included from /opt/webkit/WebKit/Source/WTF/wtf/MetaAllocatorPtr.h:29: /opt/webkit/WebKit/Source/WTF/wtf/PtrTag.h:431:23: error: use of undeclared identifier 'nullptr_t'; did you mean 'nullptr'? inline T* tagArrayPtr(nullptr_t, size_t size) ^~~~~~~~~ nullptr /opt/webkit/WebKit/Source/WTF/wtf/PtrTag.h:431:34: error: unexpected type name 'size_t': expected expression inline T* tagArrayPtr(nullptr_t, size_t size) ^ /opt/webkit/WebKit/Source/WTF/wtf/PtrTag.h:431:46: error: expected ';' at end of declaration inline T* tagArrayPtr(nullptr_t, size_t size) ^ ; /opt/webkit/WebKit/Source/WTF/wtf/PtrTag.h:432:1: error: expected unqualified-id { ^ /opt/webkit/WebKit/Source/WTF/wtf/PtrTag.h:438:11: error: redefinition of 'tagArrayPtr' as different kind of symbol inline T* tagArrayPtr(T* ptr, size_t) ^ /opt/webkit/WebKit/Source/WTF/wtf/PtrTag.h:431:11: note: previous definition is here inline T* tagArrayPtr(nullptr_t, size_t size) ^ 5 errors generated.
Attachments
Patch
(1.50 KB, patch)
2019-05-15 03:21 PDT
,
Víctor M. Jáquez L.
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Víctor M. Jáquez L.
Comment 1
2019-05-15 03:21:10 PDT
Created
attachment 369943
[details]
Patch
WebKit Commit Bot
Comment 2
2019-05-15 08:13:08 PDT
Comment on
attachment 369943
[details]
Patch Clearing flags on attachment: 369943 Committed
r245325
: <
https://trac.webkit.org/changeset/245325
>
WebKit Commit Bot
Comment 3
2019-05-15 08:13:09 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-05-15 08:14:19 PDT
<
rdar://problem/50810987
>
Alexey Proskuryakov
Comment 5
2019-05-15 14:41:16 PDT
***
Bug 197907
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug