compilation failure with clang 9 https://bugs.webkit.org/show_bug.cgi?id=197911

Patch by Víctor Manuel Jáquez Leal <vjaquez@igalia.com> on 2019-05-15
Reviewed by Alex Christensen.

Use std namespace for nullptr_t in tagArrayPtr templates.

* wtf/PtrTag.h:
(WTF::tagArrayPtr):

Canonical link: https://commits.webkit.org/212038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245325 268f45cc-cd09-0410-ab3c-d52691b4dbfc